--- a/src/assets/css/theme.less
+++ b/src/assets/css/theme.less
@@ -1,15 +1,20 @@
-@primary-color : #c3985d;
+@primary-color : #248f97; // #c2975b
 
-@primary-color-background : @primary-color;
-@dark-primary-color: @primary-color - #303030;
-@darkest-primary-color: @primary-color - #404040;
-@light-primary-color: @primary-color + #303030;
+.theme-dark-blue {
+    @primary-color : #245a97; // #c2975b
+}
+
+@primary-color-background: @primary-color;
+@dark-primary-color: darken(saturate(@primary-color, 10%), 20%);
+@darkest-primary-color: darken(saturate(@primary-color, 15%), 25%);
+@light-primary-color: lighten(desaturate(@primary-color, 20%), 30%);
 @right-pannel-background: #f1eee8;
+@light-color: lighten(saturate(@primary-color, 10%), 50%);
 @text-color: black;
 @title-color: #6b6a7b;
 @left-pannel-text: white;
 @right-pannel-text: @primary-color;
-@icon-color: @light-primary-color;
+@icon-color: @light-color;
 @tag-bg-color: @primary-color;
 @circle-icon-color: @primary-color;
 @border-color: fade(@darkest-primary-color, 33%);
